k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp
  namespace: default
spec:
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
        - name: goapp
          image: matias1210/goapp:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
