k8s/loki-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: loki
  ports:
    - port: 3100       # porta interna do serviço
      targetPort: 3100 # porta do container
      nodePort: 31100  # porta externa do node (30000-32767)
