k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp
spec:
  selector:
    app: goapp
  ports:
    - port: 8080
      targetPort: 8080
